Delujoca GPU koda za CSR in hybrid CSR+ELL

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -1,10 +1,10 @@
 
 .PHONY: all
-all: pagerank-csr pagerank-coo pagerank-ell pagerank-hybrid
+all: pagerank-csr pagerank-hybrid
 
 .PHONY: clean
 clean:
-	rm pagerank-csr pagerank-coo pagerank-ell pagerank-hybrid
+	rm pagerank-csr pagerank-hybrid
 
 pagerank-csr: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 	gcc pagerank.c \
@@ -12,8 +12,10 @@ pagerank-csr: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 		array-list-int.c \
 		matrix-formats.c \
 		-DFORMAT_CSR \
-		-lm -fopenmp -O2 \
+		-lOpenCL -O2 \
+		-lm -fopenmp \
 		-o pagerank-csr
+
 
 pagerank-coo: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 	gcc pagerank.c \
@@ -21,18 +23,10 @@ pagerank-coo: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 		array-list-int.c \
 		matrix-formats.c \
 		-DFORMAT_COO \
-		-lm -fopenmp -O2 \
+		-lOpenCL -O2 \
+		-lm -fopenmp \
 		-o pagerank-coo
 
-pagerank-ell: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
-	gcc pagerank.c \
-		list-coo-entry.c \
-		array-list-int.c \
-		matrix-formats.c \
-		-DFORMAT_ELL \
-		-DELL_CPU_OPTIMIZE \
-		-lm -fopenmp -O2 \
-		-o pagerank-ell
 
 pagerank-hybrid: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 	gcc pagerank.c \
@@ -40,7 +34,7 @@ pagerank-hybrid: pagerank.c list-coo-entry.c array-list-int.c matrix-formats.c
 		array-list-int.c \
 		matrix-formats.c \
 		-DFORMAT_HYBRID \
-		-DELL_CPU_OPTIMIZE \
-		-lm -fopenmp -O2 \
+		-lOpenCL -O2 \
+		-lm -fopenmp \
 		-o pagerank-hybrid
 
